# kg-factory

./: .gitignore  README.md  add_to_kg.py  generate_mesh_config.py  mesh_configs.py  plan.md  pubmed_scraper.py  pyproject.toml  settings.py  test_mesh_config.py  test_pubmed.py  validate_pubmed_data.py
mesh_configs/: athletic_performance.json  config_schema.json
